<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="Server Configuration">
        <EditTextPreference
            android:defaultValue="@string/host"
            android:key="@string/key_host_name"
            android:summary="@string/host_summary"
            android:title="@string/title_host" />
        <EditTextPreference
            android:defaultValue="@string/port"
            android:key="@string/key_port_name"
            android:summary="@string/port_summary"
            android:title="@string/title_port" />
    </PreferenceCategory>
    <PreferenceCategory android:title="Face Auth Configuration">
        <EditTextPreference
            android:defaultValue="@string/frame"
            android:key="@string/key_frame_name"
            android:title="@string/title_frames"
            android:summary="@string/frame_summary" />
        <EditTextPreference
            android:defaultValue="@string/threshold"
            android:key="@string/key_threshold_name"
            android:title="@string/title_threshold"
            android:summary="@string/threshold_summary" />
    </PreferenceCategory>

</PreferenceScreen>